resized pictures and gpsimg at lower  screen widths to be not as streched. tried adding hidden overflow x on main page css to see if it helps with iphone issue

--- a/jennyswebsites/src/app/components/ThirdTemplate/FourthArticle/FourthArticle.module.css
+++ b/jennyswebsites/src/app/components/ThirdTemplate/FourthArticle/FourthArticle.module.css
@@ -86,6 +86,7 @@
 
 @media (width < 413px){
     .gpsImg{
+        height: 300px;
         width: 250px;
     }
     .restName{
@@ -101,7 +102,12 @@
 }
 
 @media (width < 361px){
+
+    .fourthArticleContainer{
+        height: 30rem;
+    }
     .gpsImg{
+        height: 200px;
         width: 200px;
     }
     .restName{
