--- a/jennyswebsites/src/app/components/ThirdTemplate/ThirdArticle/ThirdArticle.module.css
+++ b/jennyswebsites/src/app/components/ThirdTemplate/ThirdArticle/ThirdArticle.module.css
@@ -157,7 +157,7 @@
     }
 
     .pictures{
-        height: 350px;
+        height: 300px;
         width: 250px;
     }
     .secondArticleText{
@@ -166,9 +166,12 @@
 }
 
 @media (width < 361px){
+    .thirdArticleContainer{
+        height: 30rem;
+    }
     .pictures{
+        height: 200px;
         width: 200px;
-        height: 300px;
     }
 }
 
